# ops-cli

./: Cargo.toml  install.sh
.github/workflows/: release.yml
docs/: README.md  SUMMARY.md
docs/commands/: README.md  auth.md  build.md  deployment.md  domain.md  env.md  launch.md  network.md  node-groups.md  nodes.md  pool.md  projects.md  server.md  ssh.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: ci-cd.md  multi-region.md  ops-toml.md
docs/reference/: ops-toml-schema.md
src/: api.rs  config.rs  main.rs  output.rs  prompt.rs  ssh.rs  types.rs  update.rs  utils.rs
src/commands/: build.rs  ci_key.rs  common.rs  deploy.rs  domain.rs  env.rs  init.rs  ip.rs  launch.rs  login.rs  logout.rs  logs.rs  mod.rs  node.rs  node_group.rs  ping.rs  pool.rs  project.rs  register.rs  scp.rs  serve.rs  server.rs  set.rs  ssh.rs  status.rs  token.rs  tunnel.rs  update.rs  whoami.rs
src/scanner/: dockerfile.rs  gomod.rs  mod.rs  node.rs  python.rs  rust.rs  static_site.rs
src/serve/: actions.rs  containers.rs  logs.rs  metrics.rs  mod.rs
