[package]
name = "ops-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
rpassword = "7.3"
dirs = "5.0"
anyhow = "1.0"
self_update = { version = "0.42.0", default-features = false, features = ["archive-zip", "compression-zip-deflate", "rustls"] }
semver = "1.0.27"

# --- 新增依赖 ---
tempfile = "3.8"