[package]
name = "ops-cli"
version = "0.6.3"
edition = "2021"

[[bin]]
name = "ops"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
rpassword = "7.3"
dirs = "5.0"
anyhow = "1.0"
self_update = { version = "0.42.0", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
semver = "1.0.27"

# --- 新增依赖 ---
dotenvy = "0.15"
tempfile = "3.8"
toml = "0.8"
shellexpand = "3.1"

# --- serve 模式 ---
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
nix = { version = "0.29", features = ["fs"] }
rand = "0.8"
